# DGP-sparse

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirement.txt  requirements.txt  setup.py
dgp_sparse/kernels/: kernel.py  laplace_kernel.py
dgp_sparse/layers/: __init__.py  activation.py  base_variational_layer.py  conv.py  dropout.py  functional.py  linear.py
dgp_sparse/models/: __init__.py  cifar_dgp_variational.py  cifar_resgp_variational.py  cifar_resnet_variational.py  dmgp_variational.py  imgnet_resnet_variational.py  mnist_dgp_variational.py  simple_cnn_variational.py  simple_dgp_variational.py  simple_fc_variational.py
dgp_sparse/utils/: __init__.py  util.py
dgp_sparse/utils/operators/: chol_inv.py  torch_scipy_sptransfer.py
dgp_sparse/utils/sparse_design/: clenshaw_curtis.py  design_class.py
dmgp/: __init__.py
dmgp/kernels/: __init__.py  laplace_kernel.py
dmgp/layers/: __init__.py  activation.py  base_variational_layer.py  batchnorm.py  conv.py  dropout.py  functional.py  linear.py
dmgp/models/: cifar_dgp_variational.py  dmgp_variational.py  mnist_dgp_variational.py
dmgp/utils/: util.py
dmgp/utils/operators/: chol_inv.py  torch_scipy_sptransfer.py
dmgp/utils/sparse_design/: __init__.py  design_class.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  install.rst  intro.rst  kernels.rst  layers.rst  models.rst
examples/: bayesian_cifar.py  bayesian_mnist.py  bayesian_regression.py  dataset.py
examples/checkpoint/bayesian/: mnist_dgp_additive.pth  simple_dgp_regress_additive.pth  simple_dgp_regress_grid.pth
(+9 files in other folders)
