[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["dgp_sparse"]

[project]
name = "DGP-sparse"
version = "0.0.1"
authors = [
  { name="Wenyuan Zhao, Haoyuan Chen", email="wyzhao@tamu.edu" },
]
description = "A sparsely activated Deep Gaussian Processes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/warrenzha/DGP-sparse"
Issues = "https://github.com/warrenzha/DGP-sparse/issues"