[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["dmgp"]

[project]
name = "dmgp"
version = "0.1.0"
authors = [
  { name="Wenyuan Zhao, Haoyuan Chen", email="wyzhao@tamu.edu" },
]
description = "A sparse expansion for Deep Gaussian Processes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/warrenzha/dmgp"
Issues = "https://github.com/warrenzha/dmgp/issues"